ProjectTest/force-app/main/default/objects/Grocery_Item__c/Grocery_Item__c.object-meta.xml
<CustomObject>
    <label>Grocery Item</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grocery Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>