ProjectTest/force-app/main/default/objects/Grocery_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diary</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Vegetables</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>