ProjectTest/force-app/main/default/objects/Grocery_Item__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>Original_Price__c - ( Discount__c * Original_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>