ProjectTest/force-app/main/default/objects/Grocery_Item__c/fields/NutriScore__c.field-meta.xml
<CustomField>
    <fullName>NutriScore__c</fullName>
    <label>NutriScore</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>